# celnetmon

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  celnetmon.cfg.example  readme
include/: bg96.h  gpio.h  serial.h  utils.h
src/: bg96.c  gpio.c  main.c  serial.c  utils.c
